# ChangeLog for media-libs/gupnp-dlna
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gupnp-dlna/ChangeLog,v 1.5 2010/10/14 20:22:05 ford_prefect Exp $

  14 Oct 2010; Arun Raghavan <ford_prefect@gentoo.org>
  -gupnp-dlna-0.2.1.ebuild, -gupnp-dlna-0.3.0.ebuild:
  Prune old versions.

*gupnp-dlna-0.4.2 (14 Oct 2010)

  14 Oct 2010; Arun Raghavan <ford_prefect@gentoo.org>
  +gupnp-dlna-0.4.2.ebuild:
  Bump to 0.4.2. Mostly build fixes.

*gupnp-dlna-0.4.0 (01 Oct 2010)

  01 Oct 2010; Arun Raghavan <ford_prefect@gentoo.org>
  +gupnp-dlna-0.4.0.ebuild:
  Bump to 0.4.0. Stable release - minor build fixes since 0.3.1.

*gupnp-dlna-0.3.0 (17 Aug 2010)

  17 Aug 2010; Arun Raghavan <ford_prefect@gentoo.org>
  +gupnp-dlna-0.3.0.ebuild:
  Bump to 0.3.0. Some API updates, new tool to list profiles, more supported
  profiles, and bug fixes.

*gupnp-dlna-0.2.1 (21 Jul 2010)

  21 Jul 2010; Arun Raghavan <ford_prefect@gentoo.org>
  +gupnp-dlna-0.2.1.ebuild, +metadata.xml:
  Add first release.
