@@ -1,6 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gupnp-dlna-0.4.0.tar.gz 429117 RMD160 57bc7a339e23153cf4854408d49961088d92ab99 SHA1 f6e44471a6050031203fc46fc092650b776e68d7 SHA256 f0968686d88c101f6b9457896cbcde388649d1dda37b16330a08662a2c88650b
 DIST gupnp-dlna-0.4.2.tar.gz 431198 RMD160 e9d716512f28f4800eeef625c1a768e69d1a9746 SHA1 84a36df9ac80bec0f0f766d2db86ad3738659583 SHA256 9e81ec231a26ed6ff286e8929b9e825a060974ade14dfc078825747f32a7b464
+DIST gupnp-dlna-0.5.0.tar.gz 403182 RMD160 bec5bcd9d2c469f01cd3436a3b4df88562a58c63 SHA1 a36d126233de821eeba1b9209e99196b3dee869c SHA256 35e18e21cd6f0031673c323aaeab340aa301d0bee4bedc0b889a76d661cb90e9
+DIST gupnp-dlna-0.5.1.tar.gz 383660 RMD160 63a1984423b01eea56068246032c7d2caa115922 SHA1 b25edaa5068d9c899b1d0250dbfe6aa8d1f7ddc7 SHA256 9888386ac3fd142a7a09229171201c12f46a122383cbeafd9a3eb77f1a182c52
 EBUILD gupnp-dlna-0.4.0.ebuild 638 RMD160 1878c6bf57e834e1fca60400779db0a94cc0ea38 SHA1 279c05635661e1e87f80fc4d312881537239444b SHA256 9f8b46ebdec5504d6925d80a1449c0e9fddbc832a38ece8fb4787fc54b67b57c
 EBUILD gupnp-dlna-0.4.2.ebuild 638 RMD160 d4f93d88cbade42fad8aa3f9c54f8f387b2afb72 SHA1 e1f82be93c2ede50547254bbd043cb6648983a47 SHA256 9fd8b8fa2c7797fb494dbc2b0e2954b565a86131c04b1b8b5e0af7381bba73e4
-MISC ChangeLog 1063 RMD160 bef7b434852bf11f81097582c8e41f121445476f SHA1 c88c68bd2f7026b4fc6d2816e900abd309e11b32 SHA256 d8f0edc8db82609e78bdcc8e8b1884383d79b6b508fcdfc9df0d6a7b64569371
+EBUILD gupnp-dlna-0.5.0.ebuild 627 RMD160 d922bf3d6cb764c557eccf98892fc8feeeab7fde SHA1 4065546ce864f5cebba5eb259a9db6194d043fd8 SHA256 e4e0941624d222b3bf7c8eb5be1ad8e1675cf3b801ca743e29ac7632de52e372
+EBUILD gupnp-dlna-0.5.1.ebuild 627 RMD160 e653161d1ee18edc04e84ed89841f1606a6d9f0d SHA1 c913fc01d46f9e6bac6b20af5b3b450ee149eb6b SHA256 e045f13d20b335bcd9a26d7082150ee90064351dbd1f1caf6216e3c7a2e36c33
+MISC ChangeLog 1313 RMD160 7a0d86cbf7d7ed03442f1206df729023bf99d277 SHA1 f305bfd3731692601cb510c258ce754cf0010eea SHA256 e09fbdab6c08e46db5f2a8d8633d7907c2c826784d2f9a3bcf18c88fc4577f11
 MISC metadata.xml 260 RMD160 8e656c1ef73bf6e422be43003891c3872051acd9 SHA1 a3cf00c1b4fd1db01be29f9d315b783b01e624cc SHA256 8be6ca4d1184b22e23ed2648697d031cfb7cab58a0a1870297305a878ccdb755
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk1i6PYACgkQ1fmVwcYIWAaqnwCfZEPLprnNrnVzeOYJuvQy9zMz
+NgQAnjr0bGaFAsplzKQ/HOPz3MRnBAeg
+=xpJp
+-----END PGP SIGNATURE-----
