@@ -1,6 +1,14 @@
 # ChangeLog for media-libs/gupnp-dlna
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gupnp-dlna/ChangeLog,v 1.5 2010/10/14 20:22:05 ford_prefect Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gupnp-dlna/ChangeLog,v 1.6 2011/02/21 22:36:27 eva Exp $
+
+*gupnp-dlna-0.5.1 (21 Feb 2011)
+*gupnp-dlna-0.5.0 (21 Feb 2011)
+
+  21 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org> +gupnp-dlna-0.5.0.ebuild,
+  +gupnp-dlna-0.5.1.ebuild:
+  Version bump. Needed for latest rygel releases, with permission from
+  maintainer.
 
   14 Oct 2010; Arun Raghavan <ford_prefect@gentoo.org>
   -gupnp-dlna-0.2.1.ebuild, -gupnp-dlna-0.3.0.ebuild:
